syntax = "proto3";
package Reflect;

option java_multiple_files = true;
option java_package = "io.grpc.unitysyncservices";
option java_outer_classname = "Unity.Reflect.ProjectServer.Services.Publisher";
option objc_class_prefix = "HLW";
option csharp_namespace = "Unity.Reflect.ProjectServer.Services.Publisher";

import "ProjectServer/Common.proto";

// This service requires the client to be signed-in and have the Reflect entitlement
service PublisherService
{	
    rpc CreateProject(CreateProjectRequest) returns (Project) {}
    rpc ListProjects (Empty) returns (ListProjectsResponse) {}
    rpc ListSyncServers (Empty) returns (ListSyncServersResponse) {}      
}

message ListSyncServersResponse {
    repeated SyncServer servers = 1;
}

message SyncServer {
    string machineName = 1;
	string endpointAddress = 2;
    string userName = 3;
    repeated string projectIds = 4;
}

message ListProjectsResponse {
    repeated Project projects = 1;
}

message Project {
	string id = 1;
	string name = 2;
}

message CreateProjectRequest {
    string projectName = 1;
    string organizationName = 2;
}

